# jvconnected

./: .readthedocs.yml  LICENSE  Pipfile  README.md  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
doc/: requirements-rtfd.txt  requirements.txt
doc/source/: conf.py  index.rst
doc/source/ext/: autodoc_qt.py  autodoc_sections.py  builtinproperty.py  doctest_ignore_output.py  propertyobj.py
doc/source/reference/: client.rst  common.rst  config.rst  device.rst  devicepreview.rst  discovery.rst  engine.rst  index.rst  utils.rst
doc/source/reference/interfaces/: base.rst  index.rst  midi.rst  netlinx-protocol.rst  netlinx.rst  paramspec.rst  tslumd.rst
doc/source/reference/ui/: index.rst  resource_manager.rst  tools.rst  utils.rst
src/jvconnected/: client.py  common.py  config.py  device.py  devicepreview.py  discovery.py  engine.py  utils.py
src/jvconnected/interfaces/: __init__.py  base.py  paramspec.py
src/jvconnected/interfaces/midi/: __init__.py  aioport.py  bcf.py  bcf_sysex.py  mapped_device.py  mapper.py  midi_io.py
src/jvconnected/interfaces/netlinx/: __init__.py  client.py  jvconnected-server.axs
src/jvconnected/interfaces/tslumd/: __init__.py  mapper.py  messages.py  umd_io.py  umd_sender.py
src/jvconnected/ui/: .gitignore  __init__.py  build_qrc.py  colorgradients.py  main.py  palette.py  requirements.txt  resource_manager.py  utils.py
src/jvconnected/ui/models/: __init__.py  device.py  devicepreview.py  engine.py  midi.py  netlinx.py  tslumd.py  (+1 more)
tests/: build_test_images.py  conftest.py  fakedevice.py  test_async_callback.py  test_config.py  test_indexed_dict.py  test_midi_mapper.py  test_named_queue.py  test_netlinx.py
tests/tslumd/: test_messages.py
(+69 files in other folders)
