[bdist_wheel]
universal = True

[metadata]
name = jvconnected
version = 0.0.1
author = Matthew Reid
author_email = matt@nomadic-recording.com
url = https://github.com/nocarryr/jvconnected
description = Api for JVC Connected Cam Devices
long_description = file: README.md
long_description_content_type = text/markdown
license = GNU General Public License v3 (GPLv3)
license_file = LICENSE
platforms = any
classifiers =
    Development Status :: 2 - Pre-Alpha


[options]
package_dir=
    =src
packages = find:
install_requires =
    zeroconf
    httpx
    loguru
    python-dispatch

[options.packages.find]
where = src
exclude = tests


[options.package_data]
* = LICENSE, README.md, requirements.txt

[tool:pytest]
testpaths = tests
